--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,11 @@
+body {
+  background-image: url("./wallpapers/2-high.jpg");
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-attachment: fixed;
+  background-size: cover;
+}
+
 /* .App {
   text-align: center;
 }
@@ -6,6 +14,7 @@
   height: 40vmin;
   pointer-events: none;
 }
+
 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
